// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Choice snapshot renders 1`] = `
<div
  className="choice last"
  key="0"
>
  <WithStyles(ChoiceInput)
    checked={true}
    choiceMode="radio"
    className="undefined"
    correctness="correct"
    disabled={true}
    displayKey="0"
    feedback=""
    onChange={[Function]}
  />
</div>
`;

exports[`CorespringChoice snapshot renders 1`] = `
<div>
  <br />
  <_default
    onToggle={[Function]}
    show={false}
    toggled={false}
  />
  <br />
  <PreviewPrompt
    className="prompt"
  />
  <WithStyles(Choice)
    checked={false}
    choice={
      Object {
        "correct": true,
        "feedback": "great",
        "label": "label a",
        "value": "a",
      }
    }
    choicesLength={3}
    disabled={false}
    displayKey="A"
    index={0}
    isEvaluateMode={false}
    key="choice-0"
    onChoiceChanged={[MockFunction]}
    showCorrect={false}
  />
  <WithStyles(Choice)
    checked={false}
    choice={
      Object {
        "label": "label b",
        "value": "b",
      }
    }
    choicesLength={3}
    disabled={false}
    displayKey="B"
    index={1}
    isEvaluateMode={false}
    key="choice-1"
    onChoiceChanged={[MockFunction]}
    showCorrect={false}
  />
  <WithStyles(Choice)
    checked={false}
    choice={
      Object {
        "correct": true,
        "feedback": "great",
        "label": "label c",
        "value": "c",
      }
    }
    choicesLength={3}
    disabled={false}
    displayKey="C"
    index={2}
    isEvaluateMode={false}
    key="choice-2"
    onChoiceChanged={[MockFunction]}
    showCorrect={false}
  />
</div>
`;

exports[`CorespringChoice snapshot renders incorrect tick if one answer is correct but it is not checked renders 1`] = `
<div>
  <br />
  <_default
    onToggle={[Function]}
    show={true}
    toggled={false}
  />
  <br />
  <PreviewPrompt
    className="prompt"
  />
  <WithStyles(Choice)
    checked={true}
    choice={
      Object {
        "correct": true,
        "feedback": "great",
        "label": "label a",
        "value": "a",
      }
    }
    choicesLength={3}
    correctness="correct"
    disabled={false}
    displayKey=""
    index={0}
    isEvaluateMode={true}
    key="choice-0"
    onChoiceChanged={[MockFunction]}
    showCorrect={false}
  />
  <WithStyles(Choice)
    checked={false}
    choice={
      Object {
        "label": "label b",
        "value": "b",
      }
    }
    choicesLength={3}
    disabled={false}
    displayKey=""
    index={1}
    isEvaluateMode={true}
    key="choice-1"
    onChoiceChanged={[MockFunction]}
    showCorrect={false}
  />
  <WithStyles(Choice)
    checked={false}
    choice={
      Object {
        "correct": true,
        "feedback": "great",
        "label": "label c",
        "value": "c",
      }
    }
    choicesLength={3}
    correctness="incorrect"
    disabled={false}
    displayKey=""
    index={2}
    isEvaluateMode={true}
    key="choice-2"
    onChoiceChanged={[MockFunction]}
    showCorrect={false}
  />
</div>
`;
